--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <!-- A declaração DOCTYPE declara a versão do HTML usado no documento -->
 <html lang="pt">
     <head>
-        <link href='https://fonts.googleapis.com/css?family=IBM Plex Mono' rel='stylesheet'>
-        <link rel="icon" href="images/hacker.png"> <!-- Colocar um icone no separador -->
         <title>João Vivas</title>  <!-- texto na decoração da janela -->
         <meta charset=UTF-8>        <!-- para caracteres acentuados   -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="images/hacker.png"> <!-- Colocar um icone no separador -->
+        <link href='https://fonts.googleapis.com/css?family=IBM Plex Mono' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/reveal.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
 
@@ -49,7 +51,7 @@
         <!-- About me -->
         <div id="About-me">
         </div>
-        <section class="margin">
+        <section class="margin reveal">
             <div class="container">
                 <div class="row gx-2">
                     <div class="col-2">
@@ -82,7 +84,7 @@
 
         <!-- Projects -->
         <div id="Projects"></div>
-        <section class="margin-projects text">
+        <section class="margin-projects text reveal">
             <h2 class="text-center">Projects</h2>
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-inner">
@@ -141,14 +143,19 @@
 
         <div id="Contact"></div>
         <section>
-            <div class="text-center text" style="margin-top:50vh;margin-bottom:50vh;">
+            <div class="text-center text reveal" style="margin-top:40vh;margin-bottom:50vh;">
                 <h2>Contacts</h2>
                 <p>E-mail: filipe.vivas.fv@gmail.com</p>
+                <!-- Social Networks -->
+                <div>
+                    <a href="https://www.linkedin.com/in/joão-v-2527b8260" style="text-decoration:none;">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="height:50px;width:50px;filter:invert(100%)"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg>
+                    </a>
+                </div>
             </div>
         </section>
 
-
-
+        <script src="scripts/reveal.js" class="text"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
