--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <section>
             <div class="text-center text reveal" style="margin-top:40vh;margin-bottom:50vh;">
                 <h2>Contacts</h2>
-                <p>E-mail: filipe.vivas.fv@gmail.com</p>
+                <p>E-mail: joao.filipe.vivas@gmail.com</p>
                 <!-- Social Networks -->
                 <div>
                     <a href="https://www.linkedin.com/in/joaovivas" style="text-decoration:none;">
